# training-data-retrieval

./: .gitignore  pyproject.toml  readme.md
configurations/: example.json  res-classifier-smooth-with-noise.json  res-classifier-smooth.json  res-classifier-with-noise.json  res-classifier.json  vgg-classifier-smooth-with-noise.json  vgg-classifier-smooth.json  vgg-classifier-with-noise.json  vgg-classifier.json
configurations/experiments/: resnet-classifier.json  vgg-classifier-smooth.json  vgg-classifier.json
configurations/figures/: res-classifier-smooth.json  vgg-classifier-smooth.json
configurations/histology/: res-classifier-smooth-with-noise.json  res-classifier-smooth.json  vgg-classifier-smooth-with-noise.json  vgg-classifier.json
configurations/mnist/: vgg-classifier-smooth.json
configurations/mnist-binary/: vgg-classifier-smooth.json
configurations/mnist-binary-2/: vgg-classifier-smooth.json
configurations/small-mnist-binary/: vgg-classifier-smooth.json
configurations/tiny-mnist-binary/: vgg-classifier-smooth.json
configurations/tiny-mnist-binary-fc/: fc.json
experiments/: 1-basic-retrieval.ipynb  2-basic-retrieval-smooth.ipynb  3-zero-grad.ipynb  4-postprocess.ipynb  5-plot-losses.ipynb  6-check-directional-convergence.ipynb  7-fc.ipynb  directional_grad_bn.py  directional_grad_bn_mnist.py  zero_grad.py  zero_grad_bn.py  zero_grad_bn_mnist.py  zero_grad_fixed.py  zero_grad_pretrained.py  zero_grad_pretrained_resnet.py
model-training/: classification-net.ipynb
models/: res_128x128.ckpt  res_128x128_smooth.ckpt  res_smooth_figures_64.ckpt  vgg_128x128_smooth.ckpt  vgg_figures_64.ckpt
models/binary_mnist/: epoch=44-val_accuracy=0.99.ckpt  (+1 more)
notebooks/: 1-generate-dataset.ipynb  2-test-mnist.ipynb  3-find-closest.ipynb  4-find-closest-lbp.ipynb  5-check-weights.ipynb
scripts/: makegif.py
src/: train_classificator.py
(+30 files in other folders)
