[project]
name = 'src'
version = '0.1.1'
authors = [
    {name = 'Artsiom Halian', email = 'galyan.artyom@gmail.com'}
]
description = 'Experiments with training data retrieval from trained neural networks'
requires-python = '>=3.10.0'
dependencies = [
    'torch',
    'lightning',
    'opencv-python',
    'matplotlib',
    'torchvision',
    'torchinfo',
    'tqdm',
    'gdown',
    'wandb'
]

[project.scripts]
train_classifier = 'src.train_classifier:main'
generate_figures = 'src.generate:main'

[tool.setuptools.packages.find]
include=['src', 'src.*']

[tool.setuptools]
include-package-data = true